@@ -37,12 +37,6 @@
 		    <groupId>se.simonsoft</groupId>
 		    <artifactId>cms-reporting</artifactId>
 		    <version>2.2.1</version>
-		    <exclusions>
-		    	<exclusion>
-		    		<groupId>javax.ws.rs</groupId>
-					<artifactId>javax.ws.rs-api</artifactId>
-		    	</exclusion>
-		    </exclusions>
 		</dependency>
 		
 
@@ -85,7 +79,23 @@
 			<version>3.1.3</version>
 			<scope>test</scope>		
 		</dependency>
-		
+
 	</dependencies>
+	
+	<build>
+		<plugins>
+			<plugin>
+				<!-- Needed for Java 17 compatibility. -->
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>${surefire-plugin.version}</version>
+				<configuration>
+					<argLine>
+						--add-opens java.base/java.lang=ALL-UNNAMED
+					</argLine>
+				</configuration>
+			</plugin>
+		</plugins>	
+	</build>
 
 </project>
